<resources>
    <string name="app_name">Kyarlay</string>
    <string name="facebook_app_id">184815485301878</string>
    <string name="friend_feedback">How likely are you to recommend Kyarlay to a friend or colleague?</string>
    <string name="order_feedback">Share feedback</string>
    <string name="rewards">Your rewards</string>
    <string name="calendar">Date of birth horoscope</string>
    <string name="point_switch_text">Use Point</string>
    <string name="point_current_text">Current Point</string>
    <string name="point_left"> M Left</string>
    <string name="point_limit_text">Points you can use</string>
    <string name="point_text">You have %s points.</string>
    <string name="point_history_title">Points History</string>
    <string name="your_ponint">Your Points  </string>
    <string name="share_app">Share App </string>
    <string name="rate_app">Rate Us </string>
    <string name="ask_product">Your questions about product</string>
    <string name="how_to_use_point">How to use your points</string>
    <string name="how_to_get_point">How to get your points</string>
    <string name="get_point_text_one">For your registraion, you can get</string>
    <string name="get_point_text_two">Kyarlay <![CDATA[<b><font color=#000>Points</font></b>]]> </string>
    <string name="get_point_text_three">and <![CDATA[<b><font color=#000>Member Disount</font></b>]]>.</string>
    <string name="point_redeem">Redeem points for Shopping</string>
    <string name="point_register">Register လုပ္ပီး Point (1000) ရယူပါ</string>
    <string name="point_post">Post တင္ပီး ပြိဳင့္(၁၀၀၀) ရယူပါ</string>
    <string name="point_friend_invite">Friend Invite လုပ္ပီး ပြိဳင့္(၅၀၀၀) ရယူပါ</string>
    <string name="point_order">က်ားေလးမွာ ေစ်းဝယ္ပီး ပြိဳင့္ ရယူမယ္</string>
    <string name="point_give_feedbck">Share your feedback and get Points (%s)</string>
    <string name="point_history">Watch Point History</string>
    <string name="your_point_dsecription">Your Point</string>
    <string name="your_point_text"><![CDATA[<b><font color=#ff0000> (Points %s) </font></b>]]> expired at <![CDATA[<b><font color=#ff0000> %s </font></b>]]></string>
    <string name="your_point_text_empty"><![CDATA[<b><font color=#ff0000> (Points %s) </font></b>]]> </string>
    <string name="point_get">Get</string>
    <string name="point_done">Done</string>
    <string name="point"> Points</string>
    <string name="nine_am"> Between 9 am to 12 pm</string>
    <string name="twelve_am"> Between 12 pm to 3 pm</string>
    <string name="three_pm"> Between 3 pm to 6 pm</string>
    <string name="six_pm"> Between 6 pm to 9 pm</string>
    <string name="nine_am_html_long"> Between <![CDATA[<b><font color=#007BFF>\t9\t</font></b>]]>  am \t\tto <![CDATA[<b><font color=#007BFF>\t12\t</font></b>]]>  pm</string>
    <string name="twelve_am_html_long"> Between <![CDATA[<b><font color=#007BFF>\t12\t</font></b>]]>  pm \t\tto <![CDATA[<b><font color=#007BFF>\t3\t</font></b>]]>  pm</string>
    <string name="three_pm_html_long"> Between <![CDATA[<b><font color=#007BFF>\t3\t</font></b>]]>  pm \t\tto <![CDATA[<b><font color=#007BFF>\t6\t</font></b>]]>  pm</string>
    <string name="six_pm_html_long"> Between <![CDATA[<b><font color=#007BFF>\t6\t</font></b>]]>  pm \t\tto <![CDATA[<b><font color=#007BFF>\t9\t</font></b>]]>  pm</string>
    <string name="nine_am_html"> <![CDATA[<b><font color=#000000> 9 </font></b>]]> to <![CDATA[<b><font color=#000000> 12 </font></b>]]> </string>
    <string name="twelve_am_html"><![CDATA[<b><font color=#000000> 12 </font></b>]]> to <![CDATA[<b><font color=#000000> 3 </font></b>]]></string>
    <string name="three_pm_html"><![CDATA[<b><font color=#000000> 3 </font></b>]]> to <![CDATA[<b><font color=#000000> 6 </font></b>]]></string>
    <string name="six_pm_html"><![CDATA[<b><font color=#000000> 6 </font></b>]]> to <![CDATA[<b><font color=#000000> 9 </font></b>]]></string>
    <string name="delivery_full_today">Delivery slot is <![CDATA[<b><font color=#000000>  fully booked today </font></b>]]> for your township. Please choose  <![CDATA[<b><font color=#000000>  tomorrow </font></b>]]> for your delivery.</string>
    <string name="delivery_full_tomorrow">Delivery slot is <![CDATA[<b><font color=#000000>  fully booked tomorrow </font></b>]]> for your township. Please choose  <![CDATA[<b><font color=#000000> the day after tomorrow </font></b>]]> for your delivery.</string>
    <string name="delivery_now">Now</string>
    <string name="title_morning">Morning</string>
    <string name="title_afternoon">Afternon</string>
    <string name="title_evening">Evening</string>
    <string name="title_night">Night</string>
    <string name="deli_time">Choose delivery date from calendar</string>
    <string name="deli_time_must_choose">Please choose delivery date and time .</string>
    <string name="today_date">Today Date </string>
    <string name="time_choose"> time can\'t choose</string>
    <string name="tomorrow_order">Your order will be sent tomorrow!</string>
    <string name="order_send">Your order will be sent Date -  %s and Time %s .</string>
    <string name="order_pickup">Your order will be picked up Date -  %s and Time %s .</string>
    <string name="order_count">orders in total</string>
    <string name="order_ordered">Your order had been ordered. Kyarlay\'s customer service will contact you soon.</string>
    <string name="order_confirmed">Your order had been confrimed. We will delivery your order on %s </string>
    <string name="order_ready_for_delivery">Your order is ready for delivery. We will deliver your order on %s</string>
    <string name="order_on_route">Your order is on route. We will deliver your order on %s</string>
    <string name="point_for_shopping">Order at Kyarlay with points</string>
    <string name="due_date_title">First day of last period:</string>
    <string name="due_date_title_hint">Please choose your first day of last period.</string>
    <string name="due_date_life_cycle">Length of Menstrual Cycle:</string>
    <string name="due_date_life_cycle_hint">Please choose your length of Menstrual Cycle.</string>
    <string name="get_pregnant1">Most Fertile</string>
    <string name="get_peroid">Expect Peroid</string>
    <string name="get_pregnant">Fertile</string>
    <string name="start_period">Period</string>
    <string name="get_pregnant_calculate">Calculate your days</string>
    <string name="get_pregnant_numofday">Total day of Menstrual</string>
    <string name="get_pregnant_numofday_hint">Please choose total day of Menstrual</string>
    <string name="due_date_cat">Calculate Due Date</string>
    <string name="get_pargnant_cat">Calculate Ovulation Date</string>
    <string name="horoscope_cat">Date of Birth Horoscope</string>
    <string name="invite_title">Invite your friend to get 5,000 kyarlay points.</string>
    <string name="invite_name">Friend\'s name</string>
    <string name="invite_phone">Friend\'s phone</string>
    <string name="invite_text">You will earn 5,000 kyarlay points when your invited friend makes a purchase through Kyarlay app.</string>
    <string name="invite_button">Invite Now</string>
    <string name="invite">Invite Friend</string>
    <string name="invite_status">Invite Status</string>
    <string name="due_date_button">Calculate Due Date</string>
    <string name="re_due_date_button">Recalculate Due Date</string>
    <string name="due_date_result"><![CDATA[<b><font color=\"#000\">Congratulation!</font></b> <br/><br/> Your baby\'s due date is <b><font color=\"#B71C1C\">\" %s %s %s  \"</font></b>.<br/><br/>You are  <b><font color=\"#B71C1C\">\" %s \"</font></b> pregnant.]]> </string>
    <string name="more_shopping">Add New Product to Shopping Cart</string>
    <string name="point_use_text">Your Point</string>
    <string name="point_to_use_text">Points to use</string>
    <string name="point_button">Use</string>
    <string name="point_grather_current">Please check the amount of points that you want to use.</string>
    <string name="reload">Try again</string>
    <string name="gift_title">Your Gifts</string>
    <string name="title_mall">Mall</string>
    <string name="title_video">Media</string>
    <string name="title_feed">Feed</string>
    <string name="title_none"></string>
    <string name="title_notifications">Help</string>
    <string name="title_for_you">For You</string>
    <string name="title_profile">Me</string>
    <string name="to_continue">Continue</string>
    <string name="continue_watch">Continue</string>
    <string name="warning">Warning!</string>
    <string name="amount_warning_greater">Your order amount is greater than %s Ks. So you can\'t use <![CDATA[<b><font color=#FF0000>%s</font></b>]]>.</string>
    <string name="amount_warning_less">Your order amount is greater than %s Ks. So you can\'t use <![CDATA[<b><font color=#FF0000>%s</font></b>]]> .</string>
    <string name="baby_birth_date">Please choose baby\'s birth month and year</string>
    <string name="edit_baby_birth_info">Edit Baby Age</string>
    <string name="edit_due_date_info">Edit Due Date</string>
    <string name="baby_birth_age">Fill up Baby Age</string>
    <string name="baby_birth_due_date">Fill up Due Date</string>
    <string name="watch_baby_progress">View Baby Development >></string>
    <string name="baby_age_info">You are %s .</string>
    <string name="no_baby_age_info">Please fill up your baby age to read all the related articles.</string>
    <string name="no_due_date_info">Please fill up your baby due_date to read all the related articles. </string>
    <string name="to_contact">Call Center</string>
    <string name="no_youtube_title">Install Youtube</string>
    <string name="no_youtube_text">Please install Youtube application to view the video.</string>
    <string name="no_youtube_button">Install</string>
    <string name="question_about">Questions about this product</string>
    <string name="no_question">There is no question about this product!</string>
    <string name="ask_question_product">Ask Question  </string>
    <string name="addtocart_buy">Add to Cart</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="member_activate">Member Activate</string>
    <string name="connect_with_memberid">Get Points From Gift Card</string>
    <string name="member_activate_title">Please Enter Member Card ID Number</string>
    <string name="connect_with_memberid_title">Please Enter Number From Kyarlay\'s Gift Card</string>
    <string name="claim_title">Use Kyarlay app daily to earn points.</string>
    <string name="claim_text">You may use kyarlay points to pay for up to (%s) percents of the purchased amount.</string>
    <string name="got_point">You got %s points.</string>
    <string name="play_wheel">Play</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="quantity">Quantity</string>
    <string name="call_phone">Call</string>
    <string name="call_phone_dialog">Choose phone number</string>
    <string name="save_to_cart_error">is added to the shopping cart</string>
    <string name="add_to_cart">Save to cart</string>
    <string name="save_to_cart_error_button">Cancel</string>
    <string name="close_button">Close</string>
    <string name="dialog_delete_title"> Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>
    <string name="dialog_delete_confirm">Confirm</string>
    <string name="new_version">Version</string>
    <string name="new_version_and_update">Your version is out of date. Please download new version.</string>
    <string name="current_version">Later</string>
    <string name="update_newversion">Use the latest version</string>
    <string name="version_out_of_date">Your version is out of date. Please download new version.</string>
    <string name="order_status">Your Order Status</string>
    <string name="knowledge">Knowledge</string>
    <string name="category">Category</string>
</resources>