<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="@string/title_mall"
        android:id="@+id/navigation_mall"
        android:icon="@drawable/baseline_storefront"
        />

    <item
        android:icon="@drawable/bl_grid_yellow"
        android:id="@+id/navigation_category"
        android:title="@string/category" />

    <item
        android:id="@+id/navigation_shopping"
        android:title=" " />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/community"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/lightbulb"
        android:title="@string/knowledge" />


</menu>
