<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/dialog">

    <com.kyarlay.ayesunaing.custom_widget.CustomTextView
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/title"
        android:gravity="center"
        android:textSize="@dimen/huge_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_phone_dialog"
        android:textColor="@color/black"/>

    <TextView
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/text_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layout_margin_reading_post"
        android:layout_marginBottom="@dimen/layout_margin_reading_post"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.kyarlay.ayesunaing.custom_widget.CustomTextView
            android:padding="@dimen/size_8dp"
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/title_small"
            android:text="@string/dialog_delete_title" />



    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/footer">


        <com.kyarlay.ayesunaing.custom_widget.CustomButton
            android:layout_marginRight="3dp"
            android:layout_weight="0.50"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/dialog_delete_cancel"
            android:id="@+id/dialog_delete_cancel"
            android:textColor="@color/black"
            android:background="@drawable/edit_border"/>

        <com.kyarlay.ayesunaing.custom_widget.CustomButton
            android:layout_marginLeft="3dp"
            android:layout_weight="0.50"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/dialog_delete_confirm"
            android:id="@+id/dialog_delete_confirm"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>



    </LinearLayout>
</LinearLayout>