<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:background="@color/white"
    android:layout_height="match_parent">

    <com.kyarlay.ayesunaing.custom_widget.CustomTextView
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/title"
        android:gravity="center"
        android:textSize="@dimen/huge_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_version"
        android:textColor="@color/black"/>


    <com.kyarlay.ayesunaing.custom_widget.CustomTextView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>
    <com.kyarlay.ayesunaing.custom_widget.CustomTextView
        android:id="@+id/dialog_save_cart_product"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="@dimen/small_text"
        android:text="@string/version_out_of_date" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <LinearLayout
            android:gravity="right"
            android:id="@+id/dialog_product_yes"
            android:orientation="horizontal"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:background="@drawable/linear_border">
            <com.kyarlay.ayesunaing.custom_widget.CustomTextView
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/update_newversion"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>