<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/like_layout"
            android:gravity="center"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/call"
                app:srcCompat="@drawable/wishlist"
                android:layout_height="25dp"
                android:layout_width="25dp"/>
            <com.kyarlay.ayesunaing.custom_widget.CustomTextView
                android:layout_marginLeft="3dp"
                android:textSize="@dimen/text"
                android:text="@string/call_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/comment_layout"
            android:gravity="center"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/wishlist"
                app:srcCompat="@drawable/comments"
                android:layout_height="25dp"
                android:layout_width="25dp"/>
            <com.kyarlay.ayesunaing.custom_widget.CustomTextView
                android:layout_marginLeft="3dp"
                android:textSize="@dimen/text"
                android:text="@string/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/share_layout"
            android:gravity="center"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/share"
                android:layout_height="25dp"
                android:layout_width="25dp"
                app:srcCompat="@drawable/share_icon"/>

            <com.kyarlay.ayesunaing.custom_widget.CustomTextView
                android:layout_marginLeft="3dp"
                android:textSize="@dimen/text"
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
